[package]
name = "install-dirs"
version = "0.2.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-v2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {optional = true,version="1.0.123",features=["derive"]}