[package]
name = "install-dirs"
version = "0.3.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository="https://github.com/chorman0773/Install-Dirs.git"
description="""
Library for handling gnu install directories in rust
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {optional = true,version="1.0.123",features=["derive"]}
